fix(console): allow wrap for toast content (#3910)

--- a/packages/console/src/components/Toast/index.module.scss
+++ b/packages/console/src/components/Toast/index.module.scss
@@ -21,6 +21,8 @@ div.toast {
   .message {
     flex: 1;
     margin: 0 _.unit(3);
+    overflow: hidden;
+    overflow-wrap: break-word;
   }
 
   &.success {
